# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sentry-uapi"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
description = "Wrapper on Sentry kernel syscalls"
categories = ["os::api"]

[lib]
path = "lib.rs"

[dependencies]

[dev-dependencies]
sentry-uapi = { path = '.', features = ['std'] }

[features]
default = []
std = []
