# SPDX-FileCopyrightText: 2023 - 2025 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

autotest_sourceset.add(when: 'CONFIG_TEST_CYCLES', if_true: files('test_cycles.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_DMA', if_true: files('test_dma.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_GPIO', if_true: files('test_gpio.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_HANDLES', if_true: files('test_handle.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_IPC', if_true: files('test_ipc.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_IRQ', if_true: files('test_irq.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_DEVICES', if_true: files('test_map.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_RANDOM', if_true: files('test_random.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_SHM', if_true: files('test_shm.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_SIGNALS', if_true: files('test_signal.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_SLEEP', if_true: files('test_sleep.c'))
autotest_sourceset.add(when: 'CONFIG_TEST_YIELD', if_true: files('test_yield.c'))
