# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

subdir('arch')

# list of statically defined headers: generic kernel headers
sentry_header_set.add(files(
  'bits.h',
  'dma.h',
  'handle.h',
  'io.h',
  'ipc.h',
  'job.h',
  'ktypes.h',
  'sched.h',
  'signal.h',
  'thread.h',
))

# managers headers
sentry_header_set.add(files(
  'managers/clock.h',
  'managers/debug.h',
  'managers/device.h',
  'managers/interrupt.h',
  'managers/io.h',
  'managers/memory.h',
  'managers/security_crypto.h',
  'managers/security.h',
  'managers/task.h',
  'managers/time.h',
))
