# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

# This directory hold composition proofness, in order to properly check functional behavior of
# each subcomponent. It is not made to be kernel entrypoints-based, but instead validate
# the behavior of each component separatlely

subdir('proof_bsp')
subdir('proof_zlib')
